[gd_scene load_steps=8 format=3 uid="uid://c5m12u5356hcl"]

[ext_resource type="Script" path="res://scenes/play/Level_Container/level2/puzzle.gd" id="1_i52ws"]
[ext_resource type="FontFile" uid="uid://daxif0slp5mli" path="res://assets/font/ComicNeueAngular-Regular.ttf" id="2_2gesj"]
[ext_resource type="Texture2D" uid="uid://8lnuql67ep3f" path="res://assets/unlock_full.png" id="3_0mpig"]
[ext_resource type="Texture2D" uid="uid://ctmqhmx7qlxls" path="res://assets/home_page/Button_01.png" id="3_ynvqq"]
[ext_resource type="Script" path="res://CloseButton.gd" id="4_utme5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4t6p1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5b2l"]

[node name="puzzle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_i52ws")

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 254.0
offset_top = 36.0
offset_right = 897.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("2_2gesj")
theme_override_font_sizes/font_size = 30
text = "Puzzle:
--> I am a 3-digit number.
--> My first digit is 2 more than my last digit.
--> My middle digit is double the last digit.
--> The sum of all three digits is 14.
What am I?"

[node name="CodeInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 306.0
offset_right = 575.0
offset_bottom = 371.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Here..."

[node name="CheckButton" type="Button" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 300.0
offset_right = 770.0
offset_bottom = 370.0
theme_override_font_sizes/font_size = 30
text = "Check"

[node name="ResultLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 262.0
offset_top = 380.0
offset_right = 889.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_2gesj")
theme_override_font_sizes/font_size = 30
text = "That's not correct.
Hint:
--> First digit = last + 2
--> Middle digit = last Ã— 2
--> Total sum = 14\""

[node name="CloseControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -3.0
offset_top = 52.0
offset_right = 37.0
offset_bottom = 92.0

[node name="TextureRect" type="TextureRect" parent="CloseControl"]
modulate = Color(0.839216, 0.858824, 0.87451, 0.47451)
layout_mode = 0
offset_left = 1010.0
offset_top = -27.0
offset_right = 1113.0
offset_bottom = 50.0
texture = ExtResource("3_ynvqq")

[node name="CloseButton" type="Button" parent="CloseControl"]
layout_mode = 0
offset_left = 1012.0
offset_top = -26.0
offset_right = 1109.0
offset_bottom = 45.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4t6p1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c5b2l")
text = "Quit"
script = ExtResource("4_utme5")

[node name="UnlockImage" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("3_0mpig")
